--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,9 +13,11 @@
     "@supabase/supabase-js": "^2.87.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.27",
+    "expo-brightness": "~14.0.8",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.11",
     "expo-file-system": "~19.0.21",
+    "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.9",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.17",
