--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.556.0",
     "next": "16.0.8",
