--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,9 +13,11 @@
     "@supabase/supabase-js": "^2.87.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.27",
+    "expo-auth-session": "~7.0.10",
     "expo-brightness": "~14.0.8",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.11",
+    "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.21",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.9",
@@ -23,6 +25,7 @@
     "expo-router": "~6.0.17",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
