--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@supabase/supabase-js": "^2.87.0",
     "base64-arraybuffer": "^1.0.2",
     "expo": "~54.0.27",
     "expo-auth-session": "~7.0.10",
+    "expo-blur": "~15.0.8",
     "expo-brightness": "~14.0.8",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.11",
